--- a/dist.ini
+++ b/dist.ini
@@ -7,6 +7,7 @@ name=Pod-Weaver-Role-DumpPerinciCmdLineScript
 
 [Prereqs]
 perl=5.010001
+Data::Dmp=0
 File::Slurper=0
 Moose::Role=0
 Perinci::CmdLine::Dump=0
