[dist] Re-pass lint-prereqs (core modules must now be listed)

--- a/dist.ini
+++ b/dist.ini
@@ -9,5 +9,7 @@ name=Pod-Weaver-Role-DumpPerinciCmdLineScript
 perl=5.010001
 Data::Dmp=0
 File::Slurper=0
+File::Temp=0
 Moose::Role=0
 Perinci::CmdLine::Dump=0
+
